--- a/QuizMaker/Info.plist
+++ b/QuizMaker/Info.plist
@@ -41,5 +41,25 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+            <key>CFBundleURLSchemes</key>
+            <array>
+                <string>fb393324777898873</string>
+            </array>
+        </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>393324777898873</string>
+    <key>FacebookDisplayName</key>
+    <string>QuizBot</string>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+        <string>fbapi</string>
+        <string>fb-messenger-share-api</string>
+        <string>fbauth2</string>
+        <string>fbshareextension</string>
+    </array>
 </dict>
 </plist>
